# mercs2-wad-simulator

./: .gitignore  1  Cargo.lock.rej  Cargo.toml  README.md  publish_release.ps1  publish_release.sh
crates/anim_patch/: Cargo.toml  README.md
crates/anim_patch/src/: main.rs  perturb.rs
crates/destruction_extract/: Cargo.toml  README.md
crates/destruction_extract/src/: main.rs
crates/dlc_port/: Cargo.toml  README.md
crates/dlc_port/src/: main.rs
crates/havok_extract/: Cargo.toml  README.md
crates/havok_extract/src/: main.rs
crates/loadprobe/: Cargo.toml  README.md
crates/loadprobe/src/: main.rs  parse.rs  phases.rs  report.rs  sha256.rs  symbolize.rs
crates/loadprobe/tests/: fixtures.rs
crates/mercs2_ai/: Cargo.toml  README.md
crates/mercs2_ai/src/: bus.rs  components.rs  lib.rs  perception.rs  relation.rs
crates/mercs2_anim/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_anim/src/: controller.rs  ik.rs  lib.rs  pose.rs  select.rs
crates/mercs2_audio/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_audio/src/: backend.rs  banks.rs  categories.rs  components.rs  engine.rs  lib.rs  mixer.rs  music.rs  sounddb.rs  spatial.rs  vo.rs  voice.rs  wave.rs
crates/mercs2_combat/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_combat/src/: components.rs  damage.rs  events.rs  firing.rs  homing.rs  impact.rs  lib.rs  lua_surface.rs  projectile.rs  ragdoll.rs  stats.rs
crates/mercs2_core/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_core/src/: components.rs  event.rs  frame.rs  guidmap.rs  lib.rs  object_filter.rs  physics_query.rs  registry.rs  render_state.rs  streaming.rs
crates/mercs2_decal/: Cargo.toml  README.md
crates/mercs2_decal/src/: components.rs  lib.rs  pool.rs  table.rs
crates/mercs2_engine/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_engine/src/: app.rs  asset.rs  blob.wgsl  camera.rs  diag.rs  game_world.rs  gameplay.rs  input.rs  lib.rs  loading.wgsl  main.rs  mesh.rs  model.rs  particles.rs  particles.wgsl  player.rs  pose.rs  post.rs  post.wgsl  registry.rs  render.rs  render_graph.rs  render_state.rs  runtime.rs  scene.rs  script_host.rs  shader.wgsl  shadow.wgsl  sky.wgsl  spawn.rs  ui.rs  ui.wgsl  wad.rs  water.rs  water.wgsl  worldutil.rs
crates/mercs2_engine/tests/: gate_invariant_probe.rs  model_assembly.rs  registry_wad_probe.rs  shader_validation.rs
crates/mercs2_faction/: Cargo.toml  README.md
crates/mercs2_faction/src/: attitude.rs  components.rs  factions.rs  lib.rs  mood.rs  pursuit.rs
crates/mercs2_formats/: Cargo.toml  DEFERRED.md  README.md  SAVE_FORMAT.md
crates/mercs2_formats/examples/: animgroup_dump.rs  hdr_diag.rs  segm_probe.rs  tex_diag.rs  texture_probe.rs
crates/mercs2_formats/src/: anim.rs  anim_select.rs  animgroup.rs  aset_type_ids.rs  atmosphere.rs  chunk_validate.rs  crc32.rs  dlc_input.rs  dlc_stfs.rs  ffcs.rs  fxdict.rs  gfx.rs  hash.rs  havok.rs  lib.rs  mannequin.rs  model_build.rs  model_cubeize.rs  model_inject.rs  orchestrator.rs  patch_wad.rs  placement.rs  placement_build.rs  retarget.rs  safe_slice.rs  save.rs  save_write.rs  schema.rs  scripts_block.rs  sges.rs  skeleton.rs  stringdb.rs  tag_registry.rs  tags.rs  terrain.rs  texsize.rs  texture.rs  texture_encode.rs  types.rs  ucfx.rs  (+2 more)
crates/mercs2_formats/src/char_skin/: automap.rs  build.rs  donor_transfer.rs  mat.rs  mod.rs  transfer.rs  validate.rs
crates/mercs2_formats/tests/: anim_explore.rs  char_automap_parity.rs  char_build_roundtrip.rs  wavelet_decompress.rs  wavelet_recompose.rs
crates/mercs2_formats/tests/fixtures/: expect_automap_50cent.json  expect_automap_crosby.json  expect_automap_mechanicgirl.json  expect_automap_riggedfigure.json  expect_automap_vietnam.json  rig_50cent.json  rig_crosby.json  rig_mechanicgirl.json  rig_riggedfigure.json  rig_vietnam.json  skeleton_npc84.json  wavelet_live_oracle.md
crates/mercs2_game/: Cargo.toml  README.md
crates/mercs2_game/src/: camera.rs  collision.rs  gameplay.rs  hero.rs  input.rs  main.rs  menu.rs  player.rs  pmc.rs  runtime.rs  script_host.rs  spawn.rs  world.rs
crates/mercs2_game/tests/: audio_wad_probe.rs  hardpoint_probe.rs  spawn_marker_probe.rs
crates/mercs2_jobs/: Cargo.toml  README.md
crates/mercs2_jobs/src/: job.rs  lib.rs  ring.rs
crates/mercs2_luac/: Cargo.toml  build.rs
crates/mercs2_luac/examples/: golden.rs
crates/mercs2_luac/src/: lib.rs
crates/mercs2_mesh/: Cargo.toml
crates/mercs2_mesh/src/: lib.rs
crates/mercs2_net/: Cargo.toml  README.md
crates/mercs2_net/src/: category.rs  lib.rs  message.rs  module_pull.rs  replicate.rs  session.rs
crates/mercs2_physics/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_physics/src/: lib.rs  soup.rs
crates/mercs2_player/: Cargo.toml  README.md
crates/mercs2_player/src/: lib.rs
crates/mercs2_poc/: Cargo.toml
crates/mercs2_poc/src/: gltf.rs
crates/mercs2_population/: Cargo.toml  README.md
crates/mercs2_population/src/: components.rs  death.rs  density.rs  lib.rs  spawner.rs
crates/mercs2_probe/: Cargo.toml  README.md
crates/mercs2_probe/src/: bone_census.rs  main.rs
crates/mercs2_reassemble/: Cargo.toml  README.md
crates/mercs2_reassemble/src/: main.rs
crates/mercs2_script/: Cargo.toml  DEFERRED.md  README.md  binding_coverage.json  hook_coverage.json
crates/mercs2_script/examples/: lua_lab.rs  mission_lab.rs
crates/mercs2_script/examples/lessons/: 01_the_engine_calls_you.lua  02_asleep_at_the_wheel.lua  03_the_double_fire.lua  04_you_are_holding_a_number.lua  05_one_script_many_objects.lua  06_the_shape.lua  README.md
crates/mercs2_script/src/: lib.rs
crates/mercs2_script/src/bindings/: ai.rs  (+36 more)
crates/mercs2_script/tests/: binding_smoke.rs  game_hooks.rs
crates/mercs2_smuggler/: Cargo.toml  README.md
crates/mercs2_smuggler/src/: main.rs
crates/mercs2_ui/: Cargo.toml  README.md
crates/mercs2_ui/src/: lib.rs  marker.rs  widget.rs
crates/mercs2_vehicle/: Cargo.toml  DEFERRED.md  README.md
crates/mercs2_vehicle/src/: camera.rs  command.rs  components.rs  drive.rs  hijack.rs  lib.rs  lua_surface.rs  lut.rs  system.rs  tuning.rs
(+108 files in other folders)
