[workspace]
members = ["crates/wad_simulator", "crates/mercs2_formats", "crates/ucfx_byteswap", "crates/dlc_port", "crates/loadprobe", "crates/cube_mod", "crates/havok_extract", "crates/destruction_extract", "crates/wad_builder", "crates/securom_unwrap", "crates/mercs2_core", "crates/mercs2_engine", "crates/mercs2_probe", "crates/mercs2_game", "crates/mercs2_script", "crates/anim_patch"]
resolver = "2"
