[workspace]
members = ["crates/wad_simulator", "crates/mercs2_formats", "crates/ucfx_byteswap", "crates/dlc_port", "crates/loadprobe", "crates/cube_mod", "crates/havok_extract", "crates/destruction_extract", "crates/wad_builder", "crates/securom_unwrap", "crates/mercs2_core", "crates/mercs2_engine", "crates/mercs2_probe", "crates/mercs2_game", "crates/mercs2_script", "crates/anim_patch", "crates/mercs2_workshop", "crates/mercs2_reassemble", "crates/mercs2_physics", "crates/mercs2_anim", "crates/mercs2_vehicle", "crates/mercs2_combat", "crates/mercs2_ai", "crates/mercs2_faction", "crates/mercs2_audio", "crates/mercs2_ui", "crates/mercs2_net"]
resolver = "2"
