[package]
name = "anim_patch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anim_patch"
path = "src/main.rs"

[dependencies]
mercs2_formats = { path = "../mercs2_formats" }
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52" # discover the game install (vz.wad / vz-patch.wad) from the registry
