[package]
name = "destruction_extract"
version = "1.0.0"
edition = "2021"
description = "Stage-2 destruction-state extractor — HIER/SWIT → intact/break_piece/static per model (mercs2_formats::orchestrator)"

[[bin]]
name = "destruction_extract"
path = "src/main.rs"

[dependencies]
mercs2_formats = { path = "../mercs2_formats" }
serde_json = "1"
