[package]
name = "dlc_port"
version = "0.1.0"
publish = false                # excluded from the crates.io release set
edition = "2021"
readme = "README.md"

[[bin]]
name = "dlc_port"
path = "src/main.rs"

[dependencies]
mercs2_formats = { path = "../mercs2_formats" }
ucfx_byteswap = { path = "../ucfx_byteswap" }
clap = { version = "4", features = ["derive"] }
