[package]
name = "havok_extract"
version = "1.0.0"
publish = false                # excluded from the crates.io release set
edition = "2021"
description = "Stage-2 Havok collision extractor — exact LE packfile decode (replaces tools/havok_extractor.py)"

[[bin]]
name = "havok_extract"
path = "src/main.rs"

[dependencies]
mercs2_formats = { path = "../mercs2_formats" }
serde_json = "1"
