[package]
name = "loadprobe"
version = "2.0.1"
edition = "2021"
description = "Mercenaries 2 modernization — world-load progress and forensic analyzer for pmc_blackbox.log (milestone scoring + end-state classification)."
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "loadprobe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
