[package]
name = "mercs2_ai"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 11 (row 23): AI (percept->goal planner, cover, squads, pedestrians, driving). WAVE-1 scaffold."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
