[package]
name = "mercs2_anim"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 8 (row 20): animation runtime (controllers, IK, ragdoll, FaceFX). WAVE-1 scaffold."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
