[package]
name = "mercs2_combat"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 10 (row 26): weapons/combat (wpn_* stats, projectile lifecycle, homing FSM, damage/explosion applier)."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
glam = "0.27"        # same version mercs2_core pins; canonical game space (LH, +Y up)
hecs = "0.10"        # same ECS substrate mercs2_core re-exports
