[package]
name = "mercs2_decal"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — Decals (row 6): decaltable loader + decal instance pool/lifetime management. Render integration is a seam against mercs2_engine. WAVE-2 scaffold."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
