[package]
name = "mercs2_engine"
version = "0.1.0"
edition = "2021"
description = "Mercenaries 2 modernization — native 64-bit engine (Rust/wgpu). Phase 1 skeleton."

# PURE LIBRARY — no binary. The engine is asset-agnostic machinery (WAD/mesh/render/stream + a typed
# API + the `run_game_world` populate seam). Game exes (`mercs2_game`) and tooling (`mercs2_probe`)
# depend on it and configure it; the engine never parses args or knows any Mercenaries specifics.
[lib]
name = "mercs2_engine"
path = "src/lib.rs"

[dependencies]
winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27" # matrix/vector math for the camera (left-handed Y-up)
# gamepad input — pure-Rust, cross-platform (Linux evdev / Windows XInput+DInput / macOS), works on
# SteamOS/Steam Deck via evdev + bundles SDL_GameControllerDB for consistent layouts. No C linking.
gilrs = "0.10"
# asset layer — the reimplementation consumes the original game's data through this crate.
mercs2_formats = { path = "../mercs2_formats" }
# simulation spine — World / fixed tick / ordered schedule / components (the ECS-driven run path).
mercs2_core = { path = "../mercs2_core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52" # discover the game install (vz.wad) from the EA Games registry key
