[package]
name = "mercs2_faction"
version = "0.1.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 13 (rows 30/31 + faction): entity state machines, destruction, faction/reputation. WAVE-1 scaffold."

[dependencies]
mercs2_core = { path = "../mercs2_core" }
mercs2_formats = { path = "../mercs2_formats" }
