[package]
name = "mercs2_formats"
version = "3.0.0"
edition = "2021"
description = "Mercenaries 2 modernization — asset format layer: WAD/sges/UCFX/mesh/texture/terrain container parsing and decompression."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
flate2 = "1"

[dev-dependencies]
serde_json = "1"
