[package]
name = "mercs2_game"
version = "0.1.0"
edition = "2021"
description = "Mercenaries 2 — the game exe: boots the engine from the player's save (profile → SaveState → world). Game-specific config lives here, driving the asset-agnostic engine."

[[bin]]
name = "mercs2_game"
path = "src/main.rs"

[dependencies]
# The game reads the player's save through the format layer, then drives the engine library's
# streaming-world render IN-PROCESS (no separate engine binary): mercs2_game IS the game exe.
mercs2_formats = { path = "../mercs2_formats" }
mercs2_engine = { path = "../mercs2_engine" }
# ECS components (Transform/ModelRef/AnimState/SkinPalette) the game spawns into the engine's World.
mercs2_core = { path = "../mercs2_core" }
# Lua script host — the game's PMC interior boot (script_host.rs) drives the engine via EngineHost.
mercs2_script = { path = "../mercs2_script" }
# Fleet gameplay/AV systems the game wires into the running engine (ticked each frame + via EngineHost).
mercs2_audio = { path = "../mercs2_audio" }
mercs2_physics = { path = "../mercs2_physics" }
mercs2_vehicle = { path = "../mercs2_vehicle" }
mercs2_ai = { path = "../mercs2_ai" }
mercs2_anim = { path = "../mercs2_anim" }
mercs2_water = { path = "../mercs2_water" }
mercs2_decal = { path = "../mercs2_decal" }
mercs2_population = { path = "../mercs2_population" }
mercs2_combat = { path = "../mercs2_combat" }
mercs2_faction = { path = "../mercs2_faction" }
mercs2_ui = { path = "../mercs2_ui" }
pollster = "0.3" # block_on the async render entry point (run_game_world) on the main thread
# The game's own render/boot path (world.rs, the TPS world loop) owns its window + event loop.
winit = "0.29"
wgpu = "0.20"
