[package]
name = "mercs2_game"
version = "1.0.1"
edition = "2021"
description = "Mercenaries 2 — the game exe: boots the engine from the player's save (profile → SaveState → world). Game-specific config lives here, driving the asset-agnostic engine."
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "mercs2_game"
path = "src/main.rs"

[dependencies]
# The game reads the player's save through the format layer, then drives the engine library's
# streaming-world render IN-PROCESS (no separate engine binary): mercs2_game IS the game exe.
mercs2_formats = { workspace = true }
mercs2_engine = { workspace = true }
# ECS components (Transform/ModelRef/AnimState/SkinPalette) the game spawns into the engine's World.
mercs2_core = { workspace = true }
# The game depends ONLY on the engine for all mercs2 mechanisms: the engine owns + re-exports every
# subsystem crate (physics/combat/ai/anim/audio/vehicle/decal/population/faction/water/ui + the Lua
# script host), so the game reaches them through `mercs2_engine::<name>::…`. The game's systems
# (runtime/gameplay/spawn/script_host) are the Mrx *rules* layer implementing the engine's seams
# (`EngineHost`, `Game`) — content driving mechanism, not the mechanism itself.
pollster = "0.3" # block_on the engine's async app::run entry point on the main thread
# Shared external deps (windowing / GPU) — used by the game's shell error handling + key enums, same as
# the engine; not part of the mercs2_* graph the refactor inverted.
winit = "0.29"
wgpu = "0.20"
