[package]
name = "mercs2_jobs"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — Pimp job system (row 15): worker pool + CS-guarded job ring, the engine's parallel-work spine. WAVE-2 scaffold."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
