[package]
name = "mercs2_net"
version = "0.1.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 16 (row 28): networking (Keystone-B replication, session/transport, FESL). WAVE-1 scaffold."

[dependencies]
mercs2_core = { path = "../mercs2_core" }
mercs2_formats = { path = "../mercs2_formats" }
