[package]
name = "mercs2_physics"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 7 (row 22): Havok character controller, rigid bodies, collision queries, MOPP/heightfield. WAVE-1 scaffold."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
