[package]
name = "mercs2_player"
version = "0.1.0"
edition = "2021"
description = "Mercenaries 2 reimpl — player concern (Player namespace): cash/fuel economy + player-controller + character/disguise. WAVE-1 scaffold."

[dependencies]
mercs2_core = { path = "../mercs2_core" }
mercs2_formats = { path = "../mercs2_formats" }
