[package]
name = "mercs2_player"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — player concern (Player namespace): cash/fuel economy + player-controller + character/disguise. WAVE-1 scaffold."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
