[package]
name = "mercs2_player"
version = "1.0.1"
edition = "2021"
description = "Mercenaries 2 reimpl — player concern (Player namespace): cash/fuel economy + player-controller + character/disguise. WAVE-1 scaffold."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
