[package]
name = "mercs2_population"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — Population / spawners (row 24): SkirmishSpawnList, living-world crowd/traffic density, dynamic-road flow. Feeds AI actors through the spawn resolver. WAVE-2 scaffold."
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
