[package]
name = "mercs2_probe"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 modernization — headless WAD diagnostic/export tool. Runs the carved-out diagnostics from mercs2_engine::diag as subcommands (no window)."
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "mercs2_probe"
path = "src/main.rs"

[dependencies]
# The diagnostics + shared world helpers live in the engine library.
mercs2_engine = { workspace = true }
mercs2_formats = { workspace = true }
# `overlays` reuses the streaming catalog fold (StreamingManager) to count what each vz_state overlay adds.
mercs2_core = { workspace = true }
# `model_namer` emits a rainbow-table name fragment (same JSON shape the workshop merges).
serde_json = "1"
