[package]
name = "mercs2_script"
version = "1.1.0"
edition = "2021"
description = "The engine's Lua script host: VM + module system (import/inherit) + the Sys.*/engine binding mechanism. Asset-agnostic; the game's Mercenaries Lua runs ON it. Charter Phase 3 (embed Lua 5.4, Surface-B gated)."
readme = "README.md"
license.workspace = true
repository.workspace = true

[lib]
name = "mercs2_script"
path = "src/lib.rs"

[dependencies]
# Lua 5.4 per charter D5 (5.1 = conservative fallback). Vendored builds Lua from source via the
# MSVC `cc` toolchain (same one wgpu uses), so no system Lua is required.
mlua = { version = "0.10", features = ["lua54", "vendored"] }
# The HUD widget tree + marker set the `Hud.*`/`Gui.*` bindings drive (via the EngineHost seam).
mercs2_ui = { workspace = true }
# The render/post-FX parameter state (RenderState) the `Atmosphere`/`Bloom`/`Graphics`/`Fade` drive,
# and the ObjectFilter/render-state types the EngineHost seam names.
mercs2_core = { workspace = true }

[dev-dependencies]
# The game-hook harness backs its EngineHost with the real AI mechanism so the Ai.* hooks exercise
# the recovered action ring + relation matrix (not a stand-in). Test-only — the lib stays standalone.
mercs2_ai = { workspace = true }
