[package]
name = "mercs2_ui"
version = "1.0.0"
edition = "2021"
description = "Mercenaries 2 reimpl — silo 15 (rows 27/18): GUI/HUD/Scaleform + input extensions. WAVE-1 scaffold."
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
mercs2_core = { workspace = true }
mercs2_formats = { workspace = true }
